--- a/src/style/Banner.css
+++ b/src/style/Banner.css
@@ -3,7 +3,7 @@
     min-height:220px;
     margin: auto;
     border-radius: 25px;
-    margin-bottom: 43px;
+    margin-bottom: 2.5rem;
     user-select: none;
     display: flex;
     position: relative;
@@ -11,6 +11,12 @@
     background-image: url(https://images.unsplash.com/photo-1593201464350-96ec57065aa2);
     background-position: center;
     background-size: cover;
+}
+
+@media screen and (width <= 768px) {
+    .banner {
+        min-height:110px;
+    }
 }
 
 .banner::before {
@@ -22,12 +28,6 @@
     background: #000000;
 }
 
-/*.banner__image{
-    width:100%;
-    border-radius: 25px;
-    max-height: 220px;
-}*/
-
 .banner__h1{
     position: absolute;
     color: white;
@@ -36,6 +36,16 @@
     text-align: center;
     font-weight: 500;
     top: 50%;
-    font-size: 48px;
+    font-size: 3rem;
+    margin-right:5%;
     transform: translateY(-50%);
+}
+
+@media screen and (width <= 1024px) {
+    .banner__h1 {
+        font-size: 1.5rem;
+        width:70%;
+        margin-left:1rem;
+        text-align: left;
+    }
 }
