--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -4,8 +4,8 @@
     align-items: center;
     color: #FF6060;
     font-weight: 500;
-    margin-bottom: 63px;
-    padding-inline: 3rem;
+    margin-bottom: 4rem;
+    padding-inline: 3em;
     margin-top:3rem;
 }
 
@@ -16,6 +16,13 @@
 .navbar a {
     color: #FF6060;
     text-decoration: none;
+    font-size: 1.5rem;
+}
+@media screen and (width <= 768px) {
+    .navbar a {
+        text-transform: uppercase;
+        font-size: 0.75rem;
+    }
 }
 
 .navbar a:hover {
