--- a/src/style/HousingCard.css
+++ b/src/style/HousingCard.css
@@ -3,22 +3,58 @@
     border-radius: 10px;
     display: grid;
     flex-basis: 30%;
-    align-items: end;
     width:100%;
-    min-height:340px;
     margin-bottom:3%;
 }
 
-@media screen and (width <= 1074px) {
+.card:nth-last-child(2), .card:nth-last-child(1) {
+    margin-right:auto;
+    margin-left:auto;
+}
+
+@media screen and (width <= 1024px) {
     .card {
         flex-basis: 100%;
     }
 }
 
+.card a {
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    justify-content:flex-end;
+    min-height:340px;
+}
+
+@media screen and (width <= 1024px) {
+    .card a {
+        min-height:255px;
+    }
+}
+
+.card__image {
+    width:95%;
+    object-fit:cover;
+    border-radius: 10px;
+    height:320px;
+    margin-left:auto;
+    margin-right:auto;
+    margin-block:2%;
+    filter:brightness(0.75);
+}
+
+@media screen and (width <= 1024px) {
+    .card__image {
+        height:240px;
+    }
+}
+
 .card__title {
     width:50%;
-    font-size:18px;
+    font-size:1.125rem;
     margin-left: 5%;
     margin-bottom: 5%;
     color: #ffffff;
+    position:absolute;
 }
