--- a/src/style/HousingPage.css
+++ b/src/style/HousingPage.css
@@ -16,6 +16,12 @@
     display: flex;
 }
 
+@media screen and (width <= 768px) {
+    .housing-page__header {
+        flex-direction: column;
+    }
+}
+
 .housing-page__title {
     flex-grow: 1;
 }
@@ -23,12 +29,12 @@
 .housing-page__title h1 {
     font-weight: 500;
     margin-block:0;
-    font-size: 36px;
+    font-size: 2.25rem;
 }
 .housing-page__title h2 {
     font-weight: 500;
     margin-top:0;
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .housing-page__tags {
@@ -46,16 +52,32 @@
 }
 
 .housing-page__owner {
-    margin-right: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+@media screen and (width <= 768px) {
+    .housing-page__owner {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
 
 .housing-page__owner__details {
     display : flex;
+    gap: 0.7rem;
+}
+@media screen and (width <= 768px) {
+    .housing-page__owner__details {
+        order: 1;
+    }
 }
 
 .housing-page__owner h3 {
     margin-block: 0;
-    font-size: 18px;
+    font-size: 1.125rem;
     font-weight: 400;
     display: flex;
     flex-direction: column;
@@ -69,11 +91,11 @@
     background-color:#C4C4C4;
 }
 
-.fa-star {
+.housing-page__owner__star .fa-star {
 	color: #E3E3E3;
-	padding: 1rem;
+	padding: 0.5rem;
 }
 
-.red {
+.housing-page__owner__star i.red {
 	color: #FF6060;
 }
