--- a/src/style/HousingCard.css
+++ b/src/style/HousingCard.css
@@ -7,9 +7,10 @@
     margin-bottom:3%;
 }
 
-.card:nth-last-child(2), .card:nth-last-child(1) {
+.card:last-child {
     margin-right:auto;
-    margin-left:auto;
+    margin-left:5%;
+
 }
 
 @media screen and (width <= 1024px) {
@@ -40,7 +41,7 @@
     height:320px;
     margin-left:auto;
     margin-right:auto;
-    margin-block:2%;
+    margin-block:3%;
     filter:brightness(0.75);
 }
 
