--- a/src/style/HousingCard.css
+++ b/src/style/HousingCard.css
@@ -25,12 +25,12 @@
     flex-direction: column;
     position: relative;
     justify-content:flex-end;
-    min-height:340px;
+    height:340px;
 }
 
 @media screen and (width <= 1024px) {
     .card a {
-        min-height:255px;
+        height:255px;
     }
 }
 
@@ -38,17 +38,9 @@
     width:95%;
     object-fit:cover;
     border-radius: 10px;
-    height:320px;
-    margin-left:auto;
-    margin-right:auto;
-    margin-block:3%;
+    height:95%;
+    margin:auto;
     filter:brightness(0.75);
-}
-
-@media screen and (width <= 1024px) {
-    .card__image {
-        height:240px;
-    }
 }
 
 .card__title {
