--- a/src/style/Main.css
+++ b/src/style/Main.css
@@ -1,5 +1,11 @@
 .main {
-    padding-inline: 3rem;
+    padding-inline: 6em;
     margin-bottom: 3rem;
     min-height: 60vh;
+}
+
+@media screen and (width <= 768px) {
+    .main {
+        padding-inline: 1.25em;
+    }
 }
