--- a/src/style/Banner.css
+++ b/src/style/Banner.css
@@ -1,6 +1,6 @@
 .banner {
     max-width:100%;
-    min-height:220px;
+    height:220px;
     margin: auto;
     border-radius: 25px;
     margin-bottom: 2.5rem;
@@ -8,14 +8,35 @@
     display: flex;
     position: relative;
     color: #f7f7f7;
-    background-image: url(https://images.unsplash.com/photo-1593201464350-96ec57065aa2);
-    background-position: center;
     background-size: cover;
 }
 
 @media screen and (width <= 768px) {
     .banner {
-        min-height:110px;
+        border-radius: 10px;
+        margin-bottom: 1.375rem;
+    }
+}
+
+.banner--home {
+    background-image: url(https://images.unsplash.com/photo-1593201464350-96ec57065aa2);
+    background-position: center;
+}
+
+@media screen and (width <= 768px) {
+    .banner--home {
+        height:110px;
+    }
+}
+
+.banner--about {
+    background-image: url(https://images.unsplash.com/photo-1464822759023-fed622ff2c3b);
+    background-position: center;
+}
+
+@media screen and (width <= 768px) {
+    .banner--about {
+        height:220px;
     }
 }
 
@@ -28,7 +49,13 @@
     background: #000000;
 }
 
-.banner__h1{
+@media screen and (width <= 768px) {
+    .banner::before {
+        border-radius: 10px;
+    }
+}
+
+.banner__h1--home {
     position: absolute;
     color: white;
     margin: 0px;
@@ -42,10 +69,16 @@
 }
 
 @media screen and (width <= 1024px) {
-    .banner__h1 {
+    .banner__h1--home {
         font-size: 1.5rem;
         width:70%;
         margin-left:1rem;
         text-align: left;
+        display:flex;
+        flex-direction: column;
     }
+}
+
+.banner__h1--about {
+    display:none;
 }
