--- a/src/style/Header.css
+++ b/src/style/Header.css
@@ -5,12 +5,13 @@
     font-weight: 500;
     margin-bottom: 4rem;
     padding-inline: 6em;
-    margin-top:3rem;
+    margin-top: 3rem;
 }
 
 @media screen and (width <= 768px) {
     .navbar {
-        padding-inline:1.25em;
+        padding-inline: 1.25em;
+        margin-bottom: 1rem;
     }
 }
 
@@ -20,18 +21,18 @@
 
 @media screen and (width <= 768px) {
     .navbar__logo img {
-        width:80%;
+        width: 80%;
     }
 }
 
 .navbar__menu {
     display: flex;
-    gap:2rem;
+    gap: 2rem;
 }
 
 @media screen and (width <= 768px) {
     .navbar__menu {
-        gap:0.5rem;
+        gap: 0.5rem;
     }
 }
 
