--- a/src/style/Error.css
+++ b/src/style/Error.css
@@ -1,6 +1,7 @@
 .error-page {
     color: #FF6060;
     text-align: center;
+    margin-bottom:10rem;
 }
 
 .error-page h1 {
@@ -9,10 +10,25 @@
     margin-bottom: 4.125rem;
 }
 
+@media screen and (width <= 768px) {
+    .error-page h1 {
+        font-size: 6rem;
+        margin-bottom: 1rem;
+        margin-top: 12.5rem;
+    }
+}
+
 .error-page h2 {
     font-size: 2.25rem;
     font-weight: 500;
     margin-bottom: 11rem;
+}
+
+@media screen and (width <= 768px) {
+    .error-page h2 {
+        font-size: 1.125rem;
+        margin-bottom: 8rem;
+    }
 }
 
 .error-page a {
