--- a/src/style/Footer.css
+++ b/src/style/Footer.css
@@ -6,5 +6,15 @@
     display: flex;
     justify-content: center;
     flex-direction: column;
-    gap:1rem;
+    gap:2rem;
+}
+
+.footer__text {
+    font-size:1.5rem;
+}
+
+@media screen and (width <= 768px) {
+    .footer__text {
+        font-size:0.75rem;
+    }
 }
