--- a/src/style/HousingCarousel.css
+++ b/src/style/HousingCarousel.css
@@ -1,22 +1,29 @@
 .housing-page__image {
-    max-width:100%;
-    height:415px;
-    margin-bottom:1.875rem;
+    max-width: 100%;
+    height: 415px;
+    margin-bottom: 1.875rem;
     position: relative;
 }
 
 @media screen and (width <= 768px) {
     .housing-page__image {
-        height:255px;
+        height: 255px;
+        margin-bottom: 1rem;
     }
 }
 
 .housing-page__image img {
-    height:100%;
-    width:100%;
+    height: 100%;
+    width: 100%;
     object-fit: cover;
+    object-position: center;
     border-radius: 25px;
     position: absolute;
+    opacity: 0;
+}
+
+.housing-page__image img.visible {
+    opacity: 1;
 }
 
 .housing-page__btn {
