--- a/src/style/HousingCarousel.css
+++ b/src/style/HousingCarousel.css
@@ -20,6 +20,7 @@
     border-radius: 25px;
     position: absolute;
     opacity: 0;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .housing-page__image img.visible {
